# the-paper

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.axum/: .gitignore  Cargo.toml  main.rs
.axum/src/: main.rs
.pocketbase/: .gitignore
.pocketbase/pb_migrations/: 1762700463_created_tag.js  1762802326_updated_tag.js  1762802840_created_bookmark.js  1762802877_updated_bookmark.js  1762803157_updated_bookmark.js  1762803208_updated_tag.js
locales/: en.yml  ru.yml
src/: app-endpoint.vue  app-suspense.vue  auto-imports.d.ts  const.ts  main.ts  typed-router.d.ts
src/components/_common/: btn.vue  line.vue  mi.vue  portal.vue  safe-area.vue  sheet.vue
src/components/_playground/: _play.section.vue  play.app.nav.vue  play.btn.vue  play.line.vue  play.theme.vue
src/components/app/: app-navigation.vue  app.footer.vue  app.hello.vue  app.mouse-hunter.vue  app.nav.vue  app.sheet-add-bookmark.vue
src/components/bookmark/: bookmark-add-dialog.vue  bookmark-card.vue  bookmark-form.vue  bookmark-list.vue  sheet-add-bookmark.vue
src/composables/: use-pb.ts
src/guards/: auth.guard.ts
src/layouts/: default.vue
src/modules/: pinia.ts  vue-i18n.ts  vue-router.ts
src/pages/: bookmarks.vue  index.vue  playground.vue  sign-in.vue  tags.vue
src/services/: README.md  bookmark.service.ts  tag.service.ts
src/stores/: app.add-bookmark.ts  app.ts  bookmark.ts  tag.ts
src/styles/: fonts.css  main.css
(+5 files in other folders)
