[package]
name = "the-paper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [ "json" ] }
scraper = "0.20"
url = "2.5"
tower-http = { version = "0.5", features = [ "cors" ] }
anyhow = "1.0"
