[package]
name = "the-paper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
url = "2.5"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
